--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,9 @@ import {
     //   "?fields=status,message,continent,continentCode,country,countryCode,region,regionName,city,district,zip,lat,lon,timezone,offset,currency,isp,org,as,asname,reverse,mobile,proxy,hosting,query";
     
     
-      var endpoint ="https://ip.nf/"+inputValue+".json"
+      // var endpoint ="https://ip.nf/"+inputValue+".json"
+
+      var endpoint ="https://api.ipapi.com/api/"+inputValue+"?access_key=a8efe72898fd508fe79fd0044ca10cdf"
 
     //   $.getJSON( "https://ip.nf/me.json", function( data ) {
     //     $("#ip").html(data.ip.ip);
@@ -94,7 +96,7 @@ import {
     var xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function () {
       if (this.readyState == 4 && this.status == 200) {
-        var response = JSON.parse(this.responseText).ip;
+        var response = JSON.parse(this.responseText);
 
         console.log(response);
 
