--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -185,7 +185,14 @@ import {
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>SaaS Admin Template</title>
+    <title>LooIP -  Need to know where an IP is from? Our IP Query Tool has the answer.Fast, accurate, and user - friendly.</title>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "qd8e8ncyqq");
+  </script>
   </head>
   <body>
     <div class="flex flex-col items-center justify-center gap-4 py-20 px-8">
