--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -193,6 +193,15 @@ import {
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "qd8e8ncyqq");
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKLLJZK9TP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NKLLJZK9TP');
+  </script>
   </head>
   <body>
     <div class="flex flex-col items-center justify-center gap-4 py-20 px-8">
